[package]
name = "rucrf"
version = "0.1.0"
edition = "2021"
authors = ["Koichi Akabe <vbkaisetsu@gmail.com>"]
description = "Conditional Random Fields implemented in pure Rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daac-tools/vaporetto"
repository = "https://github.com/daac-tools/vaporetto"
readme = "README.md"
keywords = ["crf"]
categories = ["science", "algorithms", "no-std"]

[dependencies]
bincode = "2.0.0-rc.1"  # MIT
hashbrown = "0.12"  # MIT or Apache-2.0

argmin = { git = "https://github.com/argmin-rs/argmin", optional = true }  # MIT or Apache-2.0
argmin-math = { git = "https://github.com/argmin-rs/argmin", optional = true }  # MIT or Apache-2.0
crossbeam-channel = { version = "0.5.6", optional = true }  # MIT or Apache-2.0

[features]
default = ["alloc"]
alloc = []
std = ["alloc"]
train = ["std", "argmin", "argmin-math", "crossbeam-channel"]
