[package]
name = "rucrf"
version = "0.2.2"
edition = "2021"
rust-version = "1.63"
authors = ["Koichi Akabe <vbkaisetsu@gmail.com>"]
description = "Conditional Random Fields implemented in pure Rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daac-tools/rucrf"
repository = "https://github.com/daac-tools/rucrf"
readme = "README.md"
keywords = ["crf"]
categories = ["science", "algorithms", "no-std"]

[dependencies]
bincode = "2.0.0-rc.1" # MIT
hashbrown = "0.12" # MIT or Apache-2.0

argmin = { version = "0.7.0", optional = true } # MIT or Apache-2.0
argmin-math = { version = "0.2.0", optional = true } # MIT or Apache-2.0
crossbeam-channel = { version = "0.5.6", optional = true } # MIT or Apache-2.0

[features]
default = ["train"]
alloc = []
std = ["alloc"]
train = ["std", "argmin", "argmin-math", "crossbeam-channel"]
